--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>JS Tests</title>
-        <link rel="stylesheet" href="JS Elements.css">
+        <link rel="stylesheet" href="style.css">
         <script src="JS Interaction.js" defer></script>
     </head>
     <body>
