--- a/Web Form Project/index.html
+++ b/Web Form Project/index.html
@@ -3,7 +3,7 @@
   <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
 <meta content="IE=edge" http-equiv="X-UA-compatible">
-<link rel="stylesheet" type="text/css" href="styles.css">
+<link rel="stylesheet" type="text/css" href="web-form-styles.css">
   </head>
 
 <body>
