--- a/Doc-Portal/index.html
+++ b/Doc-Portal/index.html
@@ -5,7 +5,7 @@
 
 <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
 <meta content="IE=edge" http-equiv="X-UA-Compatible">
-<link href="styles.css" type="text/css" rel="stylesheet">
+<link href="td-portal.css" type="text/css" rel="stylesheet">
 </head>
 
 <body>
