--- a/Doc-Portal/index.html
+++ b/Doc-Portal/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-
+<link rel="icon" href="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" type="image/png" />
 <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
 <meta content="IE=edge" http-equiv="X-UA-Compatible">
 <link href="td-portal.css" type="text/css" rel="stylesheet">
